# glove

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup.sh
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  mcp_benchmark.cpp
cmake/: Dependencies.cmake  ProjectOptions.cmake
docs/: architecture.md  future-work.md  host-setup.md  quickstart.md  session-policy.md  threat-model.md  validation-surface.md
fuzz/: CMakeLists.txt  README.md  change_apply_journal_fuzzer.cpp  change_manifest_fuzzer.cpp  library_bundle_fuzzer.cpp  mcp_codec_fuzzer.cpp  policy_jsonpath_fuzzer.cpp  session_plan_fuzzer.cpp
fuzz/corpus/change_apply_journal/: empty-object-record.journal  header-only.journal  truncated-record.journal  wrong-record-shape.journal
fuzz/corpus/change_manifest/: truncated-envelope.json  unknown-field.json  wrong-field-types.json
fuzz/corpus/library_bundle/: opaque-bytes.bundle  structured-json.bundle  truncated-json.bundle
fuzz/corpus/mcp_codec/: error-response.json  result-and-error.json  truncated-frame.json  valid-request.json  valid-tools-response.json  wrong-field-types.json
fuzz/corpus/policy_jsonpath/: escaping-path.json  non-object.json  truncated-object.json  valid-contained-path.json  wrong-field-type.json
fuzz/corpus/session_plan/: truncated.json  unknown-authority.json  valid-v1-with-grant.json  valid-v1.json  valid-v2-shape.json  wrong-field-types.json
include/glove/host/: config.hpp  control_client.hpp  daemon.hpp  doctor.hpp  setup.hpp
include/glove/supervisor/: change_apply_journal.hpp
packaging/launchd/: org.sage-protocol.gloved.plist.in
packaging/systemd/: sage-gloved.service.in
scripts/: preflight.sh
src/: CMakeLists.txt  gloved_main.cpp  main.cpp
src/control/: receipt_audit_protocol.cpp
src/host/: CMakeLists.txt  cli.cpp  cli.hpp  config.cpp  control_client.cpp  daemon.cpp  doctor.cpp  setup.cpp
src/mcp/: codec.cpp  jsonrpc_client.cpp
src/policy/: jsonpath_engine.cpp
src/supervisor/: change_apply_journal.cpp  change_manifest.cpp  session_plan.cpp
tests/: CMakeLists.txt
tests/container/: linux_exec_test.cpp
tests/control/: gloved_lifecycle_test.cpp  linux_session_executor_test.cpp  receipt_audit_protocol_test.cpp
tests/host/: config_test.cpp  daemon_test.cpp
tests/mcp/: codec_test.cpp  jsonrpc_client_test.cpp  lazy_init_test.cpp  stdio_transport_cloexec_test.cpp
tests/policy/: jsonpath_engine_test.cpp
tests/supervisor/: change_apply_journal_test.cpp  change_manifest_test.cpp  path_exposure_journal_test.cpp  session_plan_test.cpp
